apps/foo-bar/deployment-cepapi.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cepapi
  labels:
    app: cepapi
spec:
  selector:
    matchLabels:
      app: cepapi
  replicas: 1
  template:
    metadata:
      labels:
        app: cepapi
    spec:
      containers:
      - name: echo
        image: viniciusfca/cepapi:v1.0.0
        ports:
        - containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: 200m
