apps/foo-bar/service-cepapi.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cepapi-service
  labels:
    app: cepapi
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: cepapi
